--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,23 @@
 header div {
   text-align: center;
 }
+
+#nav{
+  width: 100%;
+}
+
+#home, #detail{
+  margin-left: 2%;
+}
+
+#tableau{
+  width: 90%;
+margin: auto;
+margin-top: 5%;
+margin-bottom: 7%;
+line-height: 3.5;
+}
+
+#divboutton{
+  margin: 2%;
+}
